# Py12_HW_6

./: SQL_query.sql  main.py  pyproject.toml
